# CodexMonitor

./: .gitignore  package-lock.json  package.json
scripts/: ios-build-device.sh  ios-build-sim.sh  ios-e2e-joke-device.sh  ios-e2e-joke-sim.sh  ios-run-sim.sh  ios-ui-screenshot-sim.sh  macos-build-signed.sh  macos-runner-dev-bg.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  entitlements.macos.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: cloudkit.rs  codex.rs  dictation_mobile.rs  event_sink.rs  git_mobile.rs  git_stub.rs  lib.rs  main.rs  settings.rs  state.rs  telegram.rs  telegram_stub.rs  terminal_mobile.rs  terminal_stub.rs  types.rs  workspaces.rs
src-tauri/src/backend/: events.rs
src-tauri/src/integrations/: mod.rs  nats.rs
src/cloud/: cloudCache.ts  cloudTelemetry.ts  cloudTypes.ts  transport.ts
src/components/: CloudClientApp.tsx  MainHeader.tsx  Messages.tsx  SettingsView.tsx  Sidebar.tsx
src/features/app/components/: CloudClientApp.tsx  MainHeader.tsx  Sidebar.tsx
src/features/app/hooks/: useAppServerEvents.ts
src/features/cloudClient/components/: CloudClientApp.tsx
src/features/cloudClient/hooks/: useCloudClient.ts
src/features/composer/components/: ComposerInput.tsx
src/features/home/components/: Home.tsx
src/hooks/: useAppSettings.ts  useResizablePanels.ts  useUpdater.ts
src/services/: tauri.ts
src/styles/: base.css  cloud-client.css  home.css  main.css  messages.css  settings.css  sidebar.css
src/threads/: threadItems.ts
src/utils/: platform.ts
(+9 files in other folders)
